## Process this file with automake to produce Makefile.in

SUBDIRS = man ca de fr it ja nl sv

EXTRA_DIST =			\
	BUGS			\
	CodingStyle		\
	FAQ			\
	HACKING			\
	INSTALL.Cygwin		\
	HOWTOPLAY		\
	README.AI		\
	README.AI_modules	\
	README.agents		\
	README.attributes 	\
	README.cma		\
	README.delta		\
	README.effects		\
	README.fcdb		\
	README.graphics		\
	README.nations		\
	README.packaging	\
	README.ruleset_experimental \
	README.ruleset_multiplayer \
	README.ruleset_civ2civ3	\
	README.rulesets		\
	README.scorelog		\
	README.SDLClient	\
	README.sound		\
	TODO
