## Process this file with automake to produce Makefile.in

SUBDIRS = man ca de fr it ja nl sv

docs =				\
	BUGS			\
	CodingStyle		\
	FAQ			\
	HACKING			\
	INSTALL.Cygwin		\
	INSTALL.meson		\
	HOWTOPLAY		\
	README.achievements     \
	README.actions		\
	README.agents		\
	README.AI		\
	README.AI_modules	\
	README.attributes 	\
	README.crosser		\
	README.delta		\
	README.effects		\
	README.fcdb		\
	README.governor		\
	README.graphics		\
	README.modpack_installer	\
	README.msys2		\
	README.nations		\
	README.packaging	\
	README.rulesets		\
	README.tilesets		\
	README.scenarios	\
	README.scorelog		\
	README.sound		\
	TODO

doc_DATA = $(docs)

EXTRA_DIST = $(docs)
